<resources>
    <string name="app_name">掌上轻工</string>
    <!--bottomBar-->
    <string name="bottomBar_home">首页</string>
    <string name="bottomBar_knowledge">知识库</string>
    <string name="bottomBar_res">资源库</string>
    <string name="bottomBar_user">我的</string>
    <!--Exception-->
    <string name="exception_message_generic">通用错误</string>
    <string name="exception_message_no_connection">网络连接错误</string>
    <!--Common-->
    <string name="toolbar_home_title">掌上轻工</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_email">电子邮箱</string>
    <string name="text_knowledge_store">行业知识库</string>
    <string name="text_resource_store">资源库</string>
    <string name="text_baike_store">百科库</string>
    <string name="text_standard_store">标准库</string>
    <string name="text_eBook_store">电子书城</string>
    <string name="text_master_store">行业专家</string>
    <string name="text_new_standard">最新标准</string>
    <string name="text_newbook_coming">新书袭来</string>
    <string name="text_hot_article">热门文章</string>
    <string name="text_hot_pic">热门图片</string>
    <string name="text_hot_video">热门视频</string>
    <string name="text_author">作者：</string>
    <string name="text_resource">来源：</string>
    <string name="text_source_format">来源：%1$s</string>
    <string name="text_publish_time">出版时间：</string>
    <string name="text_publish_time2">出版时间</string>
    <string name="text_publish_time_format">出版时间：%1$s</string>
    <string name="text_publish_name_format">出版社：%1$s</string>
    <string name="text_author_format">作者：%1$s</string>
    <string name="text_resource_format">来源：%1$s</string>
    <string name="text_standard_num">标准标号：%1$s</string>
    <string name="text_e_time">实施时间：%1$s</string>
    <string name="text_word_count">共：%1$s条</string>
    <string name="text_hot_pics">热门图集</string>
    <string name="text_hot_material">热门素材</string>
    <string name="text_reco_words">推荐词条</string>
    <string name="text_all_word">全部词条</string>
    <string name="text_material">素材</string>
    <string name="text_material_list">素材列表</string>
    <string name="text_cn_name_format">中文名称：%1$s</string>
    <string name="text_en_name_format">英文名称：%1$s</string>
    <string name="text_two_empty_format">\u3000\u3000%1$s</string>
    <string name="text_score_format">%1$s个评分</string>
    <string name="text_book_info">图书信息</string>
    <string name="text_introduction">简介</string>
    <string name="text_table_of_contents">目录</string>
    <string name="text_read">在线阅读</string>
    <string name="text_edition_num_format">版次：%1$s</string>
    <string name="text_print_time_format">印刷时间：%1$s</string>
    <string name="text_print_num_format">印次：%1$s</string>
    <string name="text_isn_format">国际标准号：%1$s</string>
    <string name="text_isn_format2">标准号：%1$s</string>
    <string name="text_classification">所属分类：</string>
    <string name="text_page_num_format">页数：%1$s</string>
    <string name="text_page_size_format">开本：%1$s</string>
    <string name="text_package_style_format">包装：%1$s</string>
    <string name="text_from_format">出自：%1$s</string>
    <string name="text_std_info">标准信息</string>
    <string name="text_std_scope">试用范围</string>
    <string name="text_get_all">查看全部</string>
    <string name="text_publish_time_format2">发布日期：%1$S</string>
    <string name="text_comprehensive">综合</string>
    <string name="text_new_goods">新品</string>
    <string name="text_price">价格</string>
    <string name="text_price_two">定价：</string>
    <string name="text_price_format">¥%1$s</string>
    <string name="text_isbn_format">ISBN:%1$s</string>
    <!--Master-->
    <string name="text_master_product">代表作品：</string>
    <string name="text_master_field_format">研究领域：%1$s</string>
    <string name="text_master_findings_format">研究成果：%1$s</string>
    <string name="text_master_person_info">个人简介</string>
    <string name="text_new_master">新锐专家</string>
    <!--Cook-->
    <string name="text_step">主要步骤</string>
    <!--DBDetail Home-->
    <string name="text_line_book">图书\nBooks</string>
    <string name="text_line_article">文章\nArticles</string>
    <string name="text_line_dictionary">词典\nDictionary</string>
    <string name="text_line_standard">标准\nStandards</string>
    <string name="text_line_img">图片\nPictures</string>
    <string name="text_line_analysis">行业分析\nIndustry Analysis</string>

    <string name="text_book">图书</string>
    <string name="text_article">文章</string>
    <string name="text_dictionary">词典</string>
    <string name="text_standard">标准</string>
    <string name="text_img">图片</string>
    <string name="text_analysis">行业分析</string>
    <string name="text_cook">菜谱</string>
    <string name="text_video">视频</string>
    <!--行业知识库-->
    <string name="text_database_food">食品数据库</string>
    <string name="text_database_paper">造纸数据库</string>
    <string name="text_database_leather">皮革数据库</string>
    <string name="text_database_furniture">家具数据库</string>
    <string name="text_database_pack">包装数据库</string>
    <string name="text_database_art">工艺美术/艺术设计数据库</string>
    <string name="text_database_clothing">服装数据库</string>
    <string name="text_database_electromechanical">机电数据库</string>
    <string name="text_database_weighing">衡器数据库</string>
    <!--Register-->
    <string name="text_confirm_password">确认密码</string>
    <string name="text_code">验证码</string>
    <string name="text_register_success">用户注册成功</string>
    <!--Msg-->
    <string name="text_user_empty">用户名为空</string>
    <string name="text_new_pwd_empty">新密码为空</string>
    <string name="text_email_empty">邮箱为空</string>
    <string name="text_pwd_empty">密码为空</string>
    <string name="text_old_pwd_empty">原密码为空</string>
    <string name="text_repwd_empty">确认密码为空</string>
    <string name="text_vcode_empty">验证码为空</string>
    <string name="text_valid_user">包含特殊字符的用户名或位数低于5位</string>
    <string name="text_valid_pwd">包含特殊字符的密码或位数低于6位</string>
    <string name="text_valid_email">Email格式错误</string>
    <string name="text_pwd_not_equal">密码两次输入不一致</string>
    <string name="text_vcode_not_equal">验证码不匹配</string>
    <string name="error_internet">网络异常</string>
    <string name="text_loading">正在加载…</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_change_pwd_success">修改密码成功</string>
    <string name="text_phone">手机号码</string>
    <!--empty holder-->
    <string name="text_title_holder">GB 5009.2–2016 食品安全国家标准食品中钙的测定</string>
    <string name="text_book_title_holder">现代服装经典版型设计</string>
    <string name="text_content_holder">标准标号：NSBD–00–00</string>
    <string name="text_e_time_holder">实施时间：2020–12–12</string>
    <string name="text_technics_beautiful">工艺美术之美</string>
    <string name="text_banner_center_title_hodler">类胡萝卜素</string>
    <string name="text_article_title_holder">生物发酵产业技术</string>
    <string name="text_book_content_holder">发酵工程是指采用现代工程技术手段，利用微生物的某些特定功能，
        为人类生产有用的产品，或直接把微生物应用于工业生产过程的一种技术。发酵工程的内容包括菌种选育、培养基的配置、灭菌、
        种子扩大培养和接种、发酵过程和产品的分离提纯（生物分离工程）等方面。发酵产品具有应用例如食品，以及在一般的工业。
        一些化学物质的商品，如乙酸，柠檬酸，和乙醇是由发酵制成。</string>
    <string name="text_book_author_holder">轻工业</string>
    <string name="text_book_resource_holder">轻工行业全媒体知识平台</string>
    <string name="toolbar_knowledge_title">行业知识库</string>
    <!--Attention-->
    <string name="attention_data_refresh_error">数据刷新错误，请检查网络或下拉重新刷新数据!</string>
    <string name="attention_data_is_empty">当前查询条件下并无数据!</string>
    <string name="text_word_footer_holder">共10000条</string>
    <string name="text_tree_menu_loading">分类列表获取中......</string>
    <string name="text_search_data_empty">搜索关键字为空</string>
    <string name="text_execute_time_format">实施日期：%1$s</string>
    <string name="text_pub_company_format">发布单位：%1$s</string>
    <string name="text_video_set">视频集合</string>
    <string name="text_video_list">视频列表</string>
    <string name="attention_exit_app">再按一次退出程序</string>
    <string name="attention_permission_denied">某些权限被拒绝,可能影响程序的一些功能使用。建议您重新授予程序该权限！</string>
    <!--My center-->
    <string name="text_collect_success">加入收藏成功</string>
    <string name="text_collect_is_empty">暂无收藏资源</string>
    <string name="text_user_name_format">%1$s，您好！</string>
    <string name="text_user_home">个人主页</string>
    <string name="text_my_res_database">我的资源库</string>
    <string name="text_my_collect">我的收藏</string>
    <string name="text_sys_setting">系统设置</string>
    <string name="text_help">帮助与反馈</string>
    <string name="text_change_account">切换账号</string>
    <string name="text_my_center">个人中心</string>
    <string name="text_origin_pw">原密码</string>
    <string name="text_new_pw">新密码</string>
    <string name="text_confirm_pw">确认密码</string>
    <string name="text_confirm_submit">确认提交</string>
    <string name="text_person_info">个人资料</string>
    <string name="text_account_security">账户安全</string>
    <string name="text_my_database_is_empty">您并未购买任何资源库</string>
    <string name="text_about_me">关于我们</string>
    <string name="text_clear">清除缓存</string>
    <string name="text_update">版本更新</string>
    <string name="text_quit">退出登录</string>
    <string name="text_clear_success_format">成功清理%1$s缓存</string>
    <string name="text_search">搜索</string>
    <string name="text_research_result">查询结果</string>
    <string name="text_data_is_empty">暂无资源</string>

    <string name="exo_controls_full_screen_description">全屏播放</string>
    <string name="text_font_small">小</string>
    <string name="text_font_middle">中</string>
    <string name="text_font_large">大</string>
    <string name="text_browse_count">浏览次数</string>
    <string name="text_search_history">搜索历史</string>
    <string name="text_clear_search_history_data_success">清除搜索历史成功</string>

</resources>
