<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="0.9">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_font_small"
        style="@style/OperateTextView"
        android:text="@string/text_font_small"
        android:layout_weight="0.3"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_font_middle"
        style="@style/OperateTextView"
        android:text="@string/text_font_middle"
        android:layout_weight="0.3"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/tv_font_large"
        style="@style/OperateTextView"
        android:text="@string/text_font_large"
        android:layout_weight="0.3"/>
</LinearLayout>
