<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_book_fragment_edition_num"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_edition_num_format"
        style="@style/book_fragment_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_book_fragment_print_time"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_print_time_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_edition_num"/>

    <TextView
        android:id="@+id/tv_book_fragment_print_num"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_print_num_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_print_time"/>

    <TextView
        android:id="@+id/tv_book_fragment_isn"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_isn_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_print_num"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline19"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>

    <TextView
        android:id="@+id/tv_book_fragment_classification_holder"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_classification"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline19"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_isn"/>

    <TextView
        android:id="@+id/tv_book_fragment_classification_info"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="TextView"
        style="@style/book_fragment_blue_text"
        app:layout_constraintLeft_toRightOf="@+id/tv_book_fragment_classification_holder"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_isn"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_book_fragment_page_num"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_page_num_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_classification_holder"/>

    <TextView
        android:id="@+id/tv_book_fragment_page_size"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_page_size_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_page_num"/>

    <TextView
        android:id="@+id/tv_book_fragment_package"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_fragment_text_view_height"
        android:text="@string/text_package_style_format"
        style="@style/book_fragment_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_fragment_page_size"/>

</android.support.constraint.ConstraintLayout>