<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_db_res_hot_article"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hf_item_article_root_height"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/tv_db_res_hot_article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:lines="2"
        android:ellipsize="end"
        tools:text="@string/text_article_title_holder"
        style="@style/hf_article_text_title"
        fresco:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_db_res_hot_article_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/text_book_content_holder"
        android:lines="2"
        android:ellipsize="end"
        style="@style/hf_article_text_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_db_res_hot_article_title"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_db_res_hot_article_title"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tv_db_res_hot_article_holder_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        style="@style/hf_article_text_info"
        android:text="@string/text_author"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_db_res_hot_article_content"
        app:layout_constraintLeft_toLeftOf="@+id/tv_db_res_hot_article_title"/>

    <TextView
        android:id="@+id/tv_db_res_hot_article_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        tools:text="@string/text_book_author_holder"
        android:lines="2"
        android:ellipsize="end"
        app:layout_constraintLeft_toRightOf="@+id/tv_db_res_hot_article_holder_author"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_db_res_hot_article_content"
        app:layout_constraintRight_toLeftOf="@+id/tv_db_res_hot_article_holder_source"
        android:layout_marginRight="0dp"/>

    <TextView
        android:id="@+id/tv_db_res_hot_article_holder_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        android:text="@string/text_resource"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_db_res_hot_article_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline27"/>

    <TextView
        android:id="@+id/tv_db_res_hot_article_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        android:lines="2"
        android:ellipsize="end"
        tools:text="@string/text_book_resource_holder"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_db_res_hot_article_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_db_res_hot_article_holder_source"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline27"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>
</android.support.constraint.ConstraintLayout>