<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_icon_article_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hf_item_article_root_height"
    android:background="@color/color_white">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_item_icon_article_indicator"
        android:layout_width="@dimen/hf_item_article_indicator_width"
        android:layout_height="@dimen/hf_item_article_indicator_height"
        fresco:placeholderImage="@drawable/indicator_yellow"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"/>

    <TextView
        android:id="@+id/tv_item_icon_article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:lines="2"
        android:ellipsize="end"
        android:text="@string/text_article_title_holder"
        style="@style/hf_article_text_title"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_icon_article_indicator"
        fresco:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/iv_item_icon_article"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/tv_item_icon_article_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/text_book_content_holder"
        android:lines="3"
        android:ellipsize="end"
        style="@style/hf_article_text_content"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_icon_article_indicator"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_icon_article_title"
        app:layout_constraintRight_toLeftOf="@+id/iv_item_icon_article"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/tv_item_icon_article_holder_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        style="@style/hf_article_text_info"
        android:text="@string/text_author"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_icon_article_indicator"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_icon_article_content"/>

    <TextView
        android:id="@+id/tv_item_icon_article_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        android:text="@string/text_book_author_holder"
        android:lines="2"
        android:ellipsize="end"
        app:layout_constraintLeft_toRightOf="@+id/tv_item_icon_article_holder_author"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="@+id/tv_item_icon_article_holder_author"/>

    <TextView
        android:id="@+id/tv_item_icon_article_holder_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        android:text="@string/text_resource"
        app:layout_constraintLeft_toRightOf="@+id/tv_item_icon_article_author"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_icon_article_content"/>

    <TextView
        android:id="@+id/tv_item_icon_article_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/hf_article_text_info"
        android:text="@string/text_book_resource_holder"
        android:lines="2"
        android:ellipsize="end"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_item_icon_article_holder_source"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_icon_article_holder_source"
        app:layout_constraintHorizontal_bias="0.0"/>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_item_icon_article"
        android:layout_width="@dimen/db_res_article_icon_width"
        android:layout_height="@dimen/db_res_article_icon_height"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_item_icon_article_source"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        fresco:placeholderImage="@drawable/database_icon_food"/>
</android.support.constraint.ConstraintLayout>