<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_hot_imgs_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hf_hot_imgs_root_height"
    android:layout_marginTop="@dimen/hf_hot_imgs_root_mTop_mBottom"
    android:layout_marginBottom="@dimen/hf_hot_imgs_root_mTop_mBottom"
    android:layout_marginStart="@dimen/hf_hot_imgs_root_mLeft_mRight"
    android:layout_marginEnd="@dimen/hf_hot_imgs_root_mLeft_mRight">

    <com.youth.banner.Banner
        android:id="@+id/item_hot_imgs_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:background="@color/color_login_gray">
    </com.youth.banner.Banner>
    <TextView
        android:id="@+id/tv_hot_imgs_banner_title"
        android:layout_width="@dimen/hf_item_banner_title_width"
        android:layout_height="@dimen/hf_item_banner_title_height"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/text_hot_pics"
        style="@style/hf_banner_title_text"
        app:layout_constraintLeft_toLeftOf="@+id/item_hot_imgs_banner"
        app:layout_constraintTop_toTopOf="@+id/item_hot_imgs_banner"/>

    <TextView
        android:id="@+id/tv_hot_imgs_banner_center_title"
        android:layout_width="@dimen/hf_item_banner_center_title_width"
        android:layout_height="wrap_content"
        android:lines="2"
        android:ellipsize="end"
        tools:text="@string/text_title_holder"
        android:text="@string/text_technics_beautiful"
        style="@style/hf_banner_center_title_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>