<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_db_res_icon_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/db_res_book_root_height"
    android:background="@color/color_white">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_item_db_res"
        android:layout_width="@dimen/db_res_book_icon_width"
        android:layout_height="@dimen/db_res_book_icon_height"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fresco:placeholderImage="@color/color_bottom_divider"
        fresco:actualImageScaleType="fitCenter"/>

    <TextView
        android:id="@+id/tv_item_db_res_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_database_food"
        android:lines="2"
        style="@style/db_res_text_title"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_db_res"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tv_item_db_res_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:lines="3"
        android:ellipsize="end"
        android:text="@string/text_book_content_holder"
        style="@style/db_res_text_content"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_db_res"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_db_res_title"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"
        android:id="@+id/db_res_guideline"/>

    <TextView
        android:id="@+id/tv_item_db_res_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_author"
        android:lines="2"
        android:ellipsize="end"
        style="@style/db_res_text_info"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_item_db_res_info"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_db_res_info"
        app:layout_constraintRight_toLeftOf="@+id/db_res_guideline"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tv_item_db_res_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_publish_time"
        style="@style/db_res_text_info"
        app:layout_constraintLeft_toRightOf="@+id/tv_item_db_res_author"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/tv_item_db_res_author"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>